Changes to support up to Java version 18